# cats-logs

./: README.md  pyproject.toml
catslogs/: binary_parser.py  embedded_constants.py  html_generator.py  log_visualizer.py  plot_generator.py
log_parsing/: CATS Log Parser.ipynb  README.md  binary_parser.py  embedded_constants.py  html_generator.py  log_parser.ipynb  log_visualizer.ipynb  log_visualizer.py  plot_generator.py  requirements.txt  vs_log_parser.ipynb
log_parsing/design/: cats-logs-architecture.excalidraw
log_parsing/flight_logs/2021_06_12_argos/: max_flight.txt
log_parsing/flight_logs/2022_03_24_drone/: flight1.txt  flight2.txt  flight3.txt  flight4.txt
log_parsing/flight_logs/Simulations/: piccard_sim.cfl  toyger_sim.cfl
log_parsing/flight_logs/argos/: test.txt
log_parsing/flight_logs/drone_before_euroc/: flight1.txt  flight2.txt
log_parsing/flight_logs/drone_median/: flight_1.txt
log_parsing/flight_logs/drone_median_2/: flight_1.txt  flight_2.txt
log_parsing/flight_logs/drone_offset/: flight_1.txt  flight_2.txt
log_parsing/flight_logs/flight_day_5/: flight_1.txt  flight_10.txt  flight_11.txt  flight_12.txt  flight_13.txt  flight_2.txt  flight_3.txt  flight_4.txt  flight_5.txt  flight_6.txt  flight_7.txt  flight_8.txt  flight_9.txt  info.txt
log_parsing/flight_logs/targeting/: drone1.txt  drone2.txt
log_parsing/flight_logs/testing_folder/: hop.txt  log_test2.txt  pressure.txt  small_hop.txt  teraterm.txt  test1.txt  test2.txt  test_log.txt
orientation/: euler_explosion_orientation.csv  orientation.py  stationary.csv
(+746 files in other folders)
