[tool.poetry]
name = "catslogs"
version = "0.1.0"
description = ""
authors = ["Control and Telemetry Systems (CATS)"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^5.5"
numpy = "^1.22"
pandas = "^1.3.5"
jupyterlab = "^3.2.5"
ipywidgets = "^7.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
